Transitions-Selectors/stylesheet.css
body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  background-color: black;
}

#menuItems {
  position: fixed;
  top: 0;
  left: 0;

  width: 220px;
  height: 100vh;

  background-color: black;
}

main {
  margin-left: 220px;

  background-color: white;

  min-height: 100vh;
}

header {
  height: 130px;

  background-color: darkred;

  display: flex;
  
  align-items: center;

  justify-content: center;
}

header p {
  margin: 0;

  font-size: 45px;

  font-weight: bold;
}

h1 {
  text-align: center;
  font-size: 45px;

  margin: 30px 0 15px 0;
}

#container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);

  gap: 50px;

  padding: 20px 50px 40px 50px;
}

article h2 {
  font-size: 20px;
  margin-bottom: 8px;

}

article p {
  font-size: 20px;
  margin-bottom: 9px;
}

article p:first-of-type::first-letter {
  font-family: "Times New Roman", Times, serif;

  font-size: 36px;

  line-height: 1;
}

a[href* = "google"] {
  
  position: relative;
  padding-right: 18px;
  
}

a[href* = "google"]::after {
  content: "";
  display: inline-block;

  width: 15px;
  height: 15px;

  margin-left: 6px;
  vertical-align: middle;

  background-image: url("arrow.png");
  background-repeat: no-repeat;

  background-size: contain;
}

#menuItems button {
  width: 100%;
  display: block;

  background: blue;
  color: white;

  cursor: pointer;

  border: 1px solid black;
  font-size: 17px;

  padding: 12px;
}

#menuItems button:hover {
  background: steelblue;
}

#jumpMenu {
  display: none;
  list-style-type: none;
  margin: 0;
  padding: 6px 0;

  background: darkgoldenrod;
}



#recentArticles:hover + #jumpMenu {
  display: block;
}

#jumpMenu:hover {
  display: block;
}

#jumpMenu li a {
  display: block;
  padding: 4px 16px;

  color: navy;

  background-color: transparent;

  text-decoration: none;
}

#jumpMenu li a:hover {
  background-color: navy;

  color: white;
}


article {
  color: lightgray;
  transform: scale(1);

  transition-property: color, transform;

  transition-duration: 2s;
  transition-timing-function: ease;
}

article:hover {
  background-color: dimgray;
  color: black;
  
  transform: scale(1.1);
}

#thanks a {
  display: inline-block;

  background-color: lightblue;

  padding: 15px 18px;
  font-size: 30px;

  color: blue;

  text-decoration: underline;
  float: right;
}

